<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/toolbar_list"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/toolbar_list_back"
            android:layout_width="@dimen/height_toolbar"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="left"
            android:padding="15dp"
            android:scaleType="center" />

        <TextView
            android:id="@+id/fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-bold"
            android:text="@string/title_following"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_toolbar_title" />

    </FrameLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/gray"
        android:divider="@drawable/list_divider"
        tools:listitem="@layout/list_item" />

    <RelativeLayout
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gray"
        android:clickable="true"
        android:orientation="horizontal"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/toolbar_profile_back"
            android:layout_width="@dimen/height_toolbar"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:padding="15dp"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_left" />

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="33dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_black_oval">

            <TextView
                android:id="@+id/tv_bio"
                style="@style/TextViewProfileToolbarTitle"
                android:layout_margin="2dp"
                android:background="@drawable/bg_orange_oval"
                android:text="@string/toolbar_bio"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_list"
                style="@style/TextViewProfileToolbarTitle"
                android:layout_alignParentEnd="true"
                android:text="@string/toolbar_details"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="2dp"
                android:background="@drawable/bg_orange_oval"
                android:textColor="@color/white" />

        </RelativeLayout>

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_list">

        <LinearLayout
            android:id="@+id/wrapper_profile_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/height_profile_picture_with_toolbar"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/text_view_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/gray"
                android:textSize="32sp"
                tools:text="SOPHIA" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/text_view_profile_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    tools:text="@string/lorem_ipsum_long" />

            </ScrollView>

        </LinearLayout>

        <include
            android:id="@+id/button_profile"
            layout="@layout/button_round_msg"
            android:layout_width="@dimen/size_button_message"
            android:layout_height="@dimen/size_button_message"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="@dimen/margin_top_button_message"
            android:visibility="invisible" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/layout_article_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_list"
        android:background="@color/white"
        android:visibility="gone" />

</RelativeLayout>
